--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 *{margin: 0;padding: 0;text-decoration: none;list-style: none;font-family: 'GyeonggiMillenniumTitle';}
 #root,body,html{width: 100%;height: 100%;}
 #root{background-color: #080b0f;}
+::selection{background: rgba(255, 255, 255, 0.1);}
