--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 *{margin: 0;padding: 0;text-decoration: none;list-style: none;font-family: 'GyeonggiMillenniumTitle';}
 #root,body,html{width: 100%;height: 100%;}
 #root{background-color: #080b0f;}
+
+@media (max-width: 720px){
+  body{font-size: 15px;}
+}
+
+@media (max-width: 480px){
+  body{font-size: 14px;}
+}
